# redis_banking_demos

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  WORKSHOP-GUIDE.md  compose.yaml  docker-compose.yml  pom.xml  proyecto-infra-poc-wordpress.md  pyproject.toml
.secrets/: README.md  db-archive-root-password.example
admin/: __main__.py  app.py  capacity_bp.py  config.py  containers.py  crontab_bp.py  dashboard_bp.py  diagnostics_bp.py  health_bp.py  history.py  history_bp.py  metrics_bp.py  report_parser.py  reports.py  rollover_bp.py  runner.py
config/: README.md  ia-ops-sources.env.example  routing-cutover.env
docs/: README.md  annual-content-rollover-checklist.md  annual-content-rollover.md  cache-policy-by-context.md  content-lifecycle-live-archive.md  docker-layout.md  edge-origin-checklist.md  ia-ops-bootstrap-contract.md  ia-ops-bootstrap-interface.md  lb-nginx-routing.md  live-archive-sync-contract.md  observability-and-operations.md  origin-behind-cloudflare-tunnel.md  poc-hardening-and-next-steps.md  poc-implementation-inventory.md  poc-lb-routing-test-cases.md  poc-local-runbook.md  poc-manual-testing-reference.md  poc-validation-checklist.md  production-readiness.md  project.md  search-architecture-live-archive.md  wordpress-contexts.md  wordpress-persistence-layout.md
ops/: __init__.py  config.py  context.py  reporting.py  services.py
projects/: proyecto-docs-seed-search-y-admin.md  proyecto-implementacion-poc.md  proyecto-rollover-anual-e-ia-ops-bootstrap.md  proyecto-wordpress-real-cache-y-busqueda.md
(+312 files in other folders)
