[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nuevecuatrouno-ops"
version = "0.1.0"
description = "Operational tooling for the Nuevecuatrouno WordPress platform"
requires-python = ">=3.11"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["ops*"]
